[project]
name = "introvert-extrovert-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.0.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.47.0",
    "xgboost>=3.0.2",
]
